# cli_adventure

./: .gitignore  AGENT.md  CHANGES.md  CMakeLists.txt  CODE_REVIEW  GAME_SETUP.md  README.md  architecture.md
examples/: GUIDE.md  tag_format_example.level
examples/campaign/: gate.level  riddle.level  start.level  stash.level
examples/campaign/art/: cell.txt
examples/campaign/tunnels/: entry.level
games/silent_summit/: start.level
games/silent_summit/art/: mountain.txt  temple.txt  yeti.txt
games/silent_summit/base/: elder_talk.level  shop.level  village.level
games/silent_summit/cave/: maze_dead_end.level  maze_entry.level  maze_loop.level  maze_yeti.level  yeti.level  yeti_pass.level
games/silent_summit/climb/: avalanche.level  cliff_success.level  path.level
games/silent_summit/endings/: buried.level  failure.level  fall_death.level  victory.level  yeti_death.level
games/silent_summit/temple/: gate.level
games/the_iron_key/: start.level
games/the_iron_key/art/: altar.txt  chest_key.txt  crypt.txt  dungeon_gate.txt  forest_gate.txt  forest_path.txt  iron_door.txt  lake_boat.txt  library_books.txt  lockface.txt  sword_rack.txt  tavern_mug.txt  tower_gate.txt  town_square.txt  wizard_roof.txt  wolf_moon.txt
games/void_protocol/: start.level
src/: main.cpp
src/context/: game_context.cpp  game_context.h
src/engine/: engine.cpp  engine.h
src/fs/: README.md
src/levels/: choice_level.cpp  choice_level.h  end_game_level.cpp  end_game_level.h  ilevel.h  input_level.cpp  input_level.h  terminal_level_factory.cpp  terminal_level_factory.h
src/parser/: parsed_level.h  tag_parser.cpp  tag_parser.h
src/ui/: README.md  renderer.cpp  renderer.h  terminal_menu.cpp  terminal_menu.h  theme.cpp  theme.h
src/validation/: game_validator.cpp  game_validator.h
tests/: choice_level_tests.cpp  context_tests.cpp  engine_flow_tests.cpp  input_level_tests.cpp  parser_tests.cpp  renderer_tests.cpp
themes/: README.md  default.theme
(+75 files in other folders)
